[tool.poetry]
name = "mitigation_diachronic_fake"
version = "0.1.0"
description = ""
authors = ["hkefka385 <murayama.taichi.mk1@is.naist.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.3"
pydash = "^5.0.2"
torch = "^1.9.1"
transformers = "^4.10.3"
tqdm = "^4.62.3"
flair = "^0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
